--- a/package.json
+++ b/package.json
@@ -5,10 +5,9 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start:db": "npx json-server data/db.json",
-    "start:server": "npx live-server --port=3001 --ignore=**/data/* .",
+    "start:server": "npx live-server --port=3001",
     "start:php": "php -S localhost:8000",
-    "start": "concurrently \"gulp\" \"npm run start:db\" \"npm run start:server\" \"npm run start:php\""
+    "start": "concurrently \"gulp\" \"npm run start:server\" \"npm run start:php\""
   },
   "keywords": [],
   "author": "",
@@ -24,7 +23,6 @@
     "gulp-sass": "^6.0.0",
     "gulp-uglify": "^3.0.2",
     "imagemin-optipng": "^8.0.0",
-    "json-server": "^1.0.0-beta.3",
     "live-server": "^1.2.2",
     "sass": "^1.83.0"
   },
@@ -34,7 +32,6 @@
     "bootstrap": "^5.3.3",
     "jquery": "^3.7.1",
     "owl.carousel": "^2.3.4",
-    "toastify": "^2.0.1",
     "toastify-js": "^1.12.0"
   }
 }
